<resources>
    <string name="campfire" translatable="false">Campfire</string>
    <string name="got_it">Got it</string>
    <string name="go_to_songs">@string/main_songs</string>
    <string name="try_again">Try again</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="undo">Undo</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="filters">Filters</string>
    <string name="filter_by_type">Filter by type</string>
    <string name="show_explicit">Explicit lyrics</string>
    <string name="filter_by_language">Filter by language</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="generating_link">Generating link…</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_hungarian">Hungarian</string>
    <string name="language_romanian">Romanian</string>
    <string name="language_unknown">Unknown</string>
    <string name="download">Download</string>
    <string name="update">Update</string>
    <string name="manage_playlists">Manage playlists</string>
    <string name="new_version_available">(New version available)</string>
    <string name="new_tag">(New)</string>
    <string name="popular_tag">Popular</string>
    <string name="drag_to_rearrange">Drag to rearrange</string>
    <string name="welcome_skip">Skip</string>
    <string name="welcome_next">Next</string>
    <string name="welcome_done">Done</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_language">Language:</string>
    <string name="welcome_theme">Theme:</string>
    <string name="welcome_conditions_part_1">"By continuing you agree to the "</string>
    <string name="welcome_conditions_part_2">Terms and Conditions</string>
    <string name="welcome_conditions_part_3">" and the "</string>
    <string name="welcome_conditions_part_4">Privacy Policy</string>
    <string name="welcome_conditions_part_5">.</string>
    <string name="user_data_title">User data</string>
    <string name="user_data_message_start">To help improve Campfire, please consider opting in to the following ways of sharing your data with the developer:</string>
    <string name="user_data_analytics_checkbox">Analytics through Google\'s Firebase service</string>
    <string name="user_data_crash_reporting_checkbox">Crash reporting through Google\'s Crashlytics service</string>
    <string name="user_data_message_end">You will be able to change these settings at any time.</string>
    <string name="song_appearance_title">Song appearance</string>
    <string name="song_appearance_description">Are you playing an instrument or just singing along? What would you like to see when you open a song?</string>
    <string name="song_appearance_lyrics_chords_english">Lyrics and chords (English notation)</string>
    <string name="song_appearance_lyrics_chords_german">Lyrics and chords (German notation)</string>
    <string name="song_appearance_lyrics_only">Lyrics only</string>
    <string name="song_appearance_lyrics_only_description">No chords whatsoever</string>
    <string name="content_language_title">Content language</string>
    <string name="content_language_description">The app will only display songs and collections in the following languages:</string>
    <string name="content_language_error">Please select at least one language</string>
    <string name="content_language_explicit_switch">Show songs with explicit lyrics</string>
    <string name="content_language_explicit_switch_enabled">Explicit songs can appear</string>
    <string name="content_language_explicit_switch_disabled">Explicit songs are hidden</string>
    <string name="content_language_initializing_error">Something went wrong while trying to load the list of languages</string>
    <string name="main_version_pattern">v%s</string>
    <string name="main_home">Home</string>
    <string name="main_collections">Collections</string>
    <string name="main_songs">Songs</string>
    <string name="main_options">Options</string>
    <string name="main_history">History</string>
    <string name="main_playlists">Playlists</string>
    <string name="main_favorites">Favorites</string>
    <string name="main_new_playlist">New playlist</string>
    <string name="main_manage_playlists">@string/manage_playlists</string>
    <string name="main_manage_downloads">Manage downloads</string>
    <string name="main_exit_confirmation_message">Do you really want to close the app?</string>
    <string name="main_exit_confirmation_close">Close</string>
    <string name="main_play_store_rating_title">Rate the app</string>
    <string name="main_play_store_rating_message">If you enjoy Campfire, please consider rating it on the Play Store!</string>
    <string name="main_play_store_rating_positive">Rate</string>
    <string name="main_play_store_rating_negative">Don\'t ask again</string>
    <string name="home_placeholder">No content to display. Double-check the filters you set up</string>
    <string name="home_update_error">Something went wrong while updating the home screen</string>
    <string name="home_search">Search</string>
    <string name="home_modules">Modules</string>
    <string name="home_song_of_the_day">Song of the day</string>
    <string name="home_new_collections">New collections</string>
    <string name="home_new_songs">New songs</string>
    <string name="home_random_collections">Random collections</string>
    <string name="home_random_songs">Random songs</string>
    <string name="collections_placeholder">No matching collections found. Double-check the filters you set up</string>
    <string name="collections_update_error">Something went wrong while updating collections</string>
    <string name="collections_search">Collection search</string>
    <string name="collections_sort_by">Sort by</string>
    <string name="collections_sort_by_title">Title</string>
    <string name="collections_sort_by_date">Upload date</string>
    <string name="collections_sort_by_popularity">Popularity</string>
    <string name="collections_bookmarked_only">Bookmarked only</string>
    <string name="collections_search_in_descriptions">Descriptions</string>
    <string name="songs_placeholder">No matching songs found. Double-check the filters you set up</string>
    <string name="songs_update_error">Something went wrong while updating the songs</string>
    <string name="songs_song_download_error">Error downloading \"%s\"</string>
    <string name="songs_search">Song search</string>
    <string name="songs_close">Close</string>
    <string name="songs_sort_by">Sort by</string>
    <string name="songs_sort_by_popularity">Popularity</string>
    <string name="songs_sort_by_title">Title</string>
    <string name="songs_sort_by_artist">Artist</string>
    <string name="songs_downloaded_only">Downloaded only</string>
    <string name="songs_search_in">Search in:</string>
    <string name="songs_search_in_titles">Titles</string>
    <string name="songs_search_in_artists">Artists</string>
    <string name="history_clear_confirmation_message">This will remove all items from your history.</string>
    <string name="history_clear_confirmation_clear">Delete all</string>
    <string name="history_song_removed_message">\"%s\" removed</string>
    <string name="history_all_songs_removed_message">All history items removed</string>
    <string name="history_now">Now</string>
    <string name="history_today">Earlier today</string>
    <string name="history_yesterday">Yesterday</string>
    <string name="history_this_week">This week</string>
    <string name="history_last_week">Last week</string>
    <string name="history_this_month">This month</string>
    <string name="history_last_month">Last month</string>
    <string name="history_this_year">This year</string>
    <string name="history_last_year">Last year</string>
    <string name="history_a_long_time_ago">A long time ago</string>
    <string name="history_hint">Swipe items away to remove them from your history</string>
    <string name="history_placeholder">The list of songs you opened will appear here in chronological order</string>
    <string name="options_preferences_preferences">Preferences</string>
    <string name="options_preferences_changelog">What\'s new</string>
    <string name="options_preferences_about">About</string>
    <string name="options_preferences_chords">Chords</string>
    <string name="options_preferences_should_show_chords">Show chords</string>
    <string name="options_preferences_show_chords_checked">Display both lyrics and chords</string>
    <string name="options_preferences_show_chords_unchecked">Display lyrics only</string>
    <string name="options_preferences_english_notation">English notation</string>
    <string name="options_preferences_german_notation">German notation</string>
    <string name="options_preferences_appearance_and_behavior">Appearance and behavior</string>
    <string name="options_preferences_exit_confirmation">Exit confirmation</string>
    <string name="options_preferences_exit_confirmation_enabled">Ask for confirmation before closing the app</string>
    <string name="options_preferences_exit_confirmation_disabled">Close the app without confirmation</string>
    <string name="options_preferences_app_theme">Theme</string>
    <string name="options_preferences_app_theme_automatic">Automatic</string>
    <string name="options_preferences_app_theme_automatic_description">Change the theme based on the time of the day</string>
    <string name="options_preferences_app_theme_dark">Dark</string>
    <string name="options_preferences_app_theme_dark_description">Always use the dark theme</string>
    <string name="options_preferences_app_theme_light">Light</string>
    <string name="options_preferences_app_theme_light_description">Always use the light theme</string>
    <string name="options_preferences_language">Language</string>
    <string name="options_preferences_language_automatic">Automatic</string>
    <string name="options_preferences_language_automatic_description">Try to match the device\'s language or fall back to English</string>
    <string name="options_preferences_language_english">English</string>
    <string name="options_preferences_language_english_description">Always use English</string>
    <string name="options_preferences_language_hungarian">Hungarian</string>
    <string name="options_preferences_language_hungarian_description">Always use Hungarian</string>
    <string name="options_preferences_language_romanian">Romanian</string>
    <string name="options_preferences_language_romanian_description">Always use Romanian</string>
    <string name="options_preferences_user_data">User data</string>
    <string name="options_preferences_reset_hints">Reset hints</string>
    <string name="options_preferences_reset_hints_description">The hints you dismissed in the past will appear again</string>
    <string name="options_about_description_top"><Data><![CDATA[
        Thank you for using <strong>Campfire</strong>!<br>
        This app was created by Pandula Péter.
        ]]></Data>
    </string>
    <string name="options_about_links">External links</string>
    <string name="options_about_google_play">Rate on Google Play</string>
    <string name="options_about_github">View on GitHub</string>
    <string name="options_about_share">Share the app</string>
    <string name="options_about_contact">Get in touch</string>
    <string name="options_about_buy_me_a_beer">Buy me a beer</string>
    <string name="options_about_legal">Legal</string>
    <string name="options_about_terms_and_conditions">Terms and Conditions</string>
    <string name="options_about_privacy_policy">Privacy Policy</string>
    <string name="options_about_licenses">Open-source licenses</string>
</resources>