<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/large_content_padding"
            android:paddingTop="@dimen/small_content_padding">

            <TextView
                style="@style/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_about_legal" />

            <TextView
                android:id="@+id/terms_and_conditions"
                style="@style/OptionsItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/first_keyline"
                android:paddingStart="@dimen/first_keyline"
                android:text="@string/options_about_terms_and_conditions" />

            <TextView
                android:id="@+id/privacy_policy"
                style="@style/OptionsItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/first_keyline"
                android:paddingStart="@dimen/first_keyline"
                android:text="@string/options_about_privacy_policy" />

            <TextView
                android:id="@+id/open_source_licenses"
                style="@style/OptionsItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/first_keyline"
                android:paddingStart="@dimen/first_keyline"
                android:text="@string/options_about_licenses" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>