<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.pandulapeter.campfire.feature.main.options.about.AboutViewModel" />

        <import type="com.pandulapeter.campfire.R" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/list_bottom_margin"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_margin"
                android:layout_marginTop="@dimen/content_padding"
                android:layout_marginEnd="@dimen/keyline_margin"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:cardCornerRadius="@dimen/card_corner"
                app:contentPadding="@dimen/large_content_padding">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <TextView
                        android:id="@+id/top"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/large_content_padding"
                        android:gravity="center"
                        app:formattedText="@{R.string.options_about_description_top}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/logo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/options_about_description_top" />

                    <ImageView
                        android:id="@id/logo"
                        android:layout_width="@dimen/touch_target"
                        android:layout_height="@dimen/touch_target"
                        android:background="@drawable/bg_circle"
                        android:contentDescription="@string/campfire"
                        android:onClick="@{() -> viewModel.onLogoClicked()}"
                        android:src="@mipmap/ic_launcher_foreground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_about_links" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_margin"
                android:layout_marginEnd="@dimen/keyline_margin"
                app:cardCornerRadius="@dimen/card_corner">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/OptionsItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_google_play"
                        android:onClick="@{() -> viewModel.onGooglePlayClicked()}"
                        android:paddingStart="@dimen/large_content_padding"
                        android:paddingEnd="@dimen/large_content_padding"
                        android:text="@string/options_about_google_play" />

                    <TextView
                        style="@style/OptionsItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_github"
                        android:onClick="@{() -> viewModel.onGitHubClicked()}"
                        android:paddingStart="@dimen/large_content_padding"
                        android:paddingEnd="@dimen/large_content_padding"
                        android:text="@string/options_about_github" />

                    <TextView
                        style="@style/OptionsItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_share"
                        android:onClick="@{() -> viewModel.onShareClicked()}"
                        android:paddingStart="@dimen/large_content_padding"
                        android:paddingEnd="@dimen/large_content_padding"
                        android:text="@string/options_about_share" />

                    <TextView
                        style="@style/OptionsItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_contact"
                        android:onClick="@{() -> viewModel.onContactClicked()}"
                        android:paddingStart="@dimen/large_content_padding"
                        android:paddingEnd="@dimen/large_content_padding"
                        android:text="@string/options_about_contact" />

                    <TextView
                        style="@style/OptionsItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_beer"
                        android:onClick="@{() -> viewModel.onBuyMeABeerClicked()}"
                        android:paddingStart="@dimen/large_content_padding"
                        android:paddingEnd="@dimen/large_content_padding"
                        android:text="@string/options_about_buy_me_a_beer" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_about_legal" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_margin"
                android:layout_marginEnd="@dimen/keyline_margin"
                app:cardCornerRadius="@dimen/card_corner">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/OptionsItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.onTermsAndConditionsClicked()}"
                        android:text="@string/options_about_terms_and_conditions" />

                    <TextView
                        style="@style/OptionsItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.onPrivacyPolicyClicked()}"
                        android:text="@string/options_about_privacy_policy" />

                    <TextView
                        style="@style/OptionsItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.onLicensesClicked()}"
                        android:text="@string/options_about_licenses" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>