<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidElementNotAllowed -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.pandulapeter.campfire.feature.main.songs.SearchControlsViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/second_keyline"
        android:paddingEnd="@dimen/first_keyline"
        android:paddingBottom="@dimen/content_padding"
        android:visibility="@{viewModel.isVisible}">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/songs_search_in" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_padding"
            android:checked="@={viewModel.searchInTitles}"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/songs_search_in_titles" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_padding"
            android:checked="@={viewModel.searchInArtists}"
            android:ellipsize="end"
            android:lines="1"
            android:text="@{viewModel.isForCollections ? @string/collections_search_in_descriptions :  @string/songs_search_in_artists}"
            tools:text="@string/songs_search_in_artists" />

    </LinearLayout>

</layout>