<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/content_padding"
            android:paddingTop="@dimen/small_content_padding">

            <TextView
                style="@style/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_preferences_language" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_padding"
                android:layout_marginStart="12dp">

                <RadioButton
                    android:id="@+id/automatic"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{@string/options_preferences_language_automatic_description}"
                    app:title="@{@string/options_preferences_language_automatic}"
                    tools:text="@string/options_preferences_language_automatic" />

                <RadioButton
                    android:id="@+id/english"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{@string/options_preferences_language_english_description}"
                    app:title="@{@string/options_preferences_language_english}"
                    tools:text="@string/options_preferences_language_english" />

            </RadioGroup>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>