<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.pandulapeter.campfire.feature.main.home.HomeViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="56dp"
            android:alpha="0.8"
            android:src="@drawable/ic_home_24dp"
            android:tint="?android:attr/textColorSecondary"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_content_padding"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/home_placeholder" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/large_content_padding"
            android:background="@drawable/bg_button"
            android:drawablePadding="@dimen/content_padding"
            android:drawableStart="@drawable/ic_collections_24dp"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onCollectionsButtonClicked()}"
            android:paddingEnd="@dimen/large_content_padding"
            android:paddingStart="@dimen/content_padding"
            android:text="@string/main_collections"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:theme="@style/ButtonTheme" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/large_content_padding"
            android:background="@drawable/bg_button"
            android:drawablePadding="@dimen/content_padding"
            android:drawableStart="@drawable/ic_songs_24dp"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onSongsButtonClicked()}"
            android:paddingEnd="@dimen/large_content_padding"
            android:paddingStart="@dimen/content_padding"
            android:text="@string/main_songs"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:theme="@style/ButtonTheme" />

    </LinearLayout>

</layout>